# questionaire

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: questionnaire-composer.agent.md  questionnaire-generator.agent.md  questionnaire-orchestrator.agent.md  questionnaire-reviewer.agent.md  questionnaire-translator.agent.md
.github/instructions/: python.instructions.md  templates.instructions.md
.github/prompts/: generate-questionnaire.prompt.md
.github/skills/: align-sections.skill.md  dedupe-questions.skill.md  idiomatic-translate.skill.md  qa-review.skill.md
deploy/: github-copilot-setup.md
scripts/: generate_samples.py
src/mcp_market_research/: __main__.py  auth.py  config.py  errors.py  logging_setup.py  server.py
src/mcp_market_research/models/: __init__.py  channel.py  locale.py  module.py  questionnaire.py  template.py
src/mcp_market_research/parsers/: __init__.py  excel_guide.py  module_workbook.py  pdf_template.py
src/mcp_market_research/renderers/: __init__.py  docx_renderer.py
src/mcp_market_research/samples/: README.md
src/mcp_market_research/tools/: __init__.py  channels.py  locale.py  modules.py  render.py  template.py  translate.py
tests/: conftest.py
tests/contract/: test_mcp_contract.py
tests/integration/: test_full_generate_flow.py
tests/unit/: test_config.py  test_docx_renderer.py  test_excel_guide.py  test_locale.py  test_module_workbook.py  test_pdf_template.py  test_translate.py
